--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "voiceagent-web",
+  "name": "灵犀-web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.13.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
